package com.github.studeasy.gui.controller.partner;

import javafx.fxml.Initializable;

import java.net.URL;
import java.util.ResourceBundle;

/**
 * Handles the creation of partner
 */
public class AddUpdatePartnerController implements Initializable {
    @Override
    public void initialize(URL url, ResourceBundle resourceBundle) {

    }
}
